# wp2static

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
tests/: conftest.py  test_convert.py  test_elementor.py  test_emit.py  test_plugins.py  test_sqldump.py  test_theme.py  test_wpdata.py  test_wxr.py
wp2static/: __init__.py  cli.py  convert.py  elementor.py  emit.py  sqldump.py  theme.py  wpdata.py  wxr.py
wp2static/plugins/: __init__.py  base.py  elementor.py  final_tiles.py
wp2static/targets/: __init__.py  _utils.py  base.py  hugo.py  jekyll.py
wp2static/templates/hugo/layouts/shortcodes/: gallery.html
wp2static/templates/hugo/themes/wp2static-defaults/: theme.toml
wp2static/templates/hugo/themes/wp2static-defaults/layouts/: index.html
wp2static/templates/hugo/themes/wp2static-defaults/layouts/_default/: list.html  single.html
wp2static/templates/jekyll/_includes/: gallery.html
